# standup-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py  standup_bot.py
